examples/envoy.yml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                generate_request_id: true
                tracing: {}
                stat_prefix: extproc-go
                internal_address_config: {}
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: outbound|8080||extproc-go
                http_filters:
                  - name: extproc-go
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      message_timeout: 5s
                      failure_mode_allow: false
                      allow_mode_override: true
                      mutation_rules:
                        allow_all_routing: true
                        allow_envoy: true
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
                        request_body_mode: STREAMED
                        response_body_mode: STREAMED
                        request_trailer_mode: SEND
                        response_trailer_mode: SEND
                      grpc_service:
                        envoy_grpc:
                          cluster_name: outbound|uds||extproc-go
                        timeout: 5s
                  - name: rewrite
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      default_source_code:
                        inline_string: |
                          function envoy_on_request(request_handle)
                            if request_handle:headers():get(":path"):find("^/response%-headers") then
                              return
                            end
                            request_handle:headers():replace(":path", "/headers?show_env=1")
                            request_handle:headers():replace(":method", "GET")
                          end

                          function envoy_on_response(response_handle)
                          end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: outbound|uds||extproc-go
      connect_timeout: 1s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: outbound|uds||extproc-go
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /var/run/extproc-go/extproc-go.sock

    - name: outbound|8080||extproc-go
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: outbound|8080||extproc-go
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: extproc-go
                      port_value: 8080

    - name: outbound|8126||datadog
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: outbound|8126||datadog
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8126

overload_manager:
  resource_monitors:
    - name: "envoy.resource_monitors.global_downstream_max_connections"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
        max_active_downstream_connections: 1000
